--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: Jekyll template for API documentation.
 url: https://example.com
 google_analytics_key:
 permalink: pretty
-baseurl: "https://transomjs.github.io/"
+baseurl: https://transomjs.github.io/
 
 collections:
   documentation:
