--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title: TransomJS
-email: your-email@domain.com
+email: admin@binaryops.ca
 description: >
   The Rapid API development framework.
 
-baseurl: "/myTransom" # /jekyll-doc-theme the subpath of your site, e.g. /blog/
-url: https://4umfreak.github.io/myTransom # the base hostname & protocol for your site
-git_address: https://github.com/4umfreak/myTransom
-git_edit_address: https://github.com/4umfreak/myTransom/blob/master
+baseurl: "" # /jekyll-doc-theme the subpath of your site, e.g. /blog/
+url: https://transomjs.github.io/ # the base hostname & protocol for your site
+git_address: https://transomjs.github.io
+git_edit_address: https://transomjs.github.io/blob/master
 
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
