add ref to secured function example

--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -8,10 +8,11 @@
 
 - title: Examples
   docs:
+  - mongodb-example  
   - server-functions-example
+  - secured-function-example
   - scaffold-example
   - smtp-example
-  - mongodb-example
 
 - title: Reference
   docs:
