reamework to library & twitter

--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,14 @@
 title: TransomJS
 email: admin@binaryops.ca
 description: >
-  The Rapid API development framework.
+  The Rapid API development library.
 
 baseurl: "" # /jekyll-doc-theme the subpath of your site, e.g. /blog/
 url: https://transomjs.github.io/ # the base hostname & protocol for your site
 git_address: https://github.com/transomjs # The landing page for the GH icon, top right.
 git_edit_address: https://github.com/transomjs/transomjs.github.io/blob/master # Allows edit with "Improve this Page"
 email_address: mailto:transomjs@binaryops.ca # The default contacy address for Transom
+twitter_url: https://twitter.com/transomjs # Twitter
 
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
